syntax = "proto3";

package larec;

option go_package = "/apiv1";

service SecretService {
    rpc ListSecrets(ListSecretsRequest) returns (ListSecretsResponse);
    rpc GetSecret(GetSecretRequest) returns (Secret);
    rpc CreateSecret(CreateSecretRequest) returns (Secret);
    rpc Updatesecret(UpdateSecretRequest) returns (Secret);
    rpc DeleteSecret(DeleteSecretRequest) returns (DeleteSecretResponce);
}

message ListSecretsRequest {
    string vault_id = 1;
    int32 offset = 2;
    int32 limit = 3;
}

message ListSecretsResponse {
    repeated Secret Secrets = 1; 
}

message GetSecretRequest {
    string secret_id = 1;
}

message CreateSecretRequest {
    string vault_id = 1;
    string name = 2;
    string description = 3;
    map<string, SecretData> data = 4;
}

message UpdateSecretRequest {
    string secret_id = 1;
    string name = 2;
    string description = 3;
    map<string, SecretData> data = 4;
}

message DeleteSecretRequest {
    string Secret_id = 1;
}

message DeleteSecretResponce {
}



message Secret {
    string vault_id = 1;
    string Secret_id = 2;

    string name = 3;
    string description = 4;

    map<string, SecretData> data = 5;
}


message SecretData {
    string name = 1;
    bytes protected_value = 2;
}